// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`audit --audit-level 1`] = `
"┌─────────────────────┬───────────────────────────────────┐
│ critical            │ Command Injection                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ nodemailer                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <6.4.16                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=6.4.16                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1708 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────────────────┐
│ critical            │ Improper Verification of Cryptographic Signature │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Package             │ xmlhttprequest-ssl                               │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Vulnerable versions │ <1.6.1                                           │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Patched versions    │ >=1.6.1                                          │
├─────────────────────┼──────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1746                │
└─────────────────────┴──────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Insufficient Entropy              │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ cryptiles                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <4.1.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=4.1.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1464 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Denial of Service                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ http-proxy                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.18.1                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.18.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1486 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────────────────────────────────┐
│ high                │ Remote Memory Exposure                                        │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Package             │ bl                                                            │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Vulnerable versions │ <1.2.3 || >2.0.0 < 2.2.1 || >=3.0.0 <3.0.1 || >= 4.0.0 <4.0.3 │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Patched versions    │ >=1.2.3 <2.0.0 || >=2.2.1 <3.0.0 || >=3.0.1 <4.0.0 || >=4.0.3 │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1555                             │
└─────────────────────┴───────────────────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Server-Side Request Forgery       │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ axios                             │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <0.21.1                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=0.21.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1594 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬────────────────────────────────────────────────────┐
│ high                │ netmask npm package vulnerable to octal input data │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Package             │ netmask                                            │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Vulnerable versions │ <2.0.1                                             │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Patched versions    │ >=2.0.1                                            │
├─────────────────────┼────────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1658                  │
└─────────────────────┴────────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Arbitrary Code Injection          │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ xmlhttprequest-ssl                │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.6.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.6.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1665 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Command Injection                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ lodash                            │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <4.17.21                          │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=4.17.21                         │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1673 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Arbitrary Code Execution          │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ underscore                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=1.3.2 <1.12.1                   │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.12.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1674 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Path traversal                    │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ url-parse                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.5.0                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.5.0                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1678 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬─────────────────────────────────────────┐
│ high                │ Resource exhaustion in socket.io-parser │
├─────────────────────┼─────────────────────────────────────────┤
│ Package             │ socket.io-parser                        │
├─────────────────────┼─────────────────────────────────────────┤
│ Vulnerable versions │ <3.3.2 || =3.4.0                        │
├─────────────────────┼─────────────────────────────────────────┤
│ Patched versions    │ >=3.3.2 <3.4.0 || >=3.4.1               │
├─────────────────────┼─────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1763       │
└─────────────────────┴─────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Tmp files readable by other users │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ sync-exec                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=0.0.0                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ <0.0.0                            │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/310  │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Prototype Pollution              │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ hoek                             │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <= 4.2.0 || >= 5.0.0 < 5.0.3     │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ > 4.2.0 < 5.0.0 || >= 5.0.3      │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/566 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Memory Exposure                  │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ tunnel-agent                     │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <0.6.0                           │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ >=0.6.0                          │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/598 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Denial of Service                │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ axios                            │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <0.18.1                          │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ >=0.18.1                         │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/880 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Insecure Default Configuration    │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ socket.io                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <2.4.0                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=2.4.0                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1609 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────┐
│ moderate            │ Regular expression denial of service │
├─────────────────────┼──────────────────────────────────────┤
│ Package             │ glob-parent                          │
├─────────────────────┼──────────────────────────────────────┤
│ Vulnerable versions │ <5.1.2                               │
├─────────────────────┼──────────────────────────────────────┤
│ Patched versions    │ >=5.1.2                              │
├─────────────────────┼──────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1751    │
└─────────────────────┴──────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Open Redirect                     │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ url-parse                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.5.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.5.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1776 │
└─────────────────────┴───────────────────────────────────┘
26 vulnerabilities found
Severity: 7 low | 7 moderate | 10 high | 2 critical"
`;

exports[`audit --dev 1`] = `
"┌─────────────────────┬───────────────────────────────────┐
│ high                │ Server-Side Request Forgery       │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ axios                             │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <0.21.1                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=0.21.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1594 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Tmp files readable by other users │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ sync-exec                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=0.0.0                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ <0.0.0                            │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/310  │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Denial of Service                │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ axios                            │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <0.18.1                          │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ >=0.18.1                         │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/880 │
└─────────────────────┴──────────────────────────────────┘
3 vulnerabilities found
Severity: 2 moderate | 1 high"
`;

exports[`audit 1`] = `
"┌─────────────────────┬───────────────────────────────────┐
│ critical            │ Command Injection                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ nodemailer                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <6.4.16                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=6.4.16                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1708 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────────────────┐
│ critical            │ Improper Verification of Cryptographic Signature │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Package             │ xmlhttprequest-ssl                               │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Vulnerable versions │ <1.6.1                                           │
├─────────────────────┼──────────────────────────────────────────────────┤
│ Patched versions    │ >=1.6.1                                          │
├─────────────────────┼──────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1746                │
└─────────────────────┴──────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Insufficient Entropy              │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ cryptiles                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <4.1.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=4.1.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1464 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Denial of Service                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ http-proxy                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.18.1                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.18.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1486 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────────────────────────────────┐
│ high                │ Remote Memory Exposure                                        │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Package             │ bl                                                            │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Vulnerable versions │ <1.2.3 || >2.0.0 < 2.2.1 || >=3.0.0 <3.0.1 || >= 4.0.0 <4.0.3 │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ Patched versions    │ >=1.2.3 <2.0.0 || >=2.2.1 <3.0.0 || >=3.0.1 <4.0.0 || >=4.0.3 │
├─────────────────────┼───────────────────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1555                             │
└─────────────────────┴───────────────────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Server-Side Request Forgery       │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ axios                             │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <0.21.1                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=0.21.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1594 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬────────────────────────────────────────────────────┐
│ high                │ netmask npm package vulnerable to octal input data │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Package             │ netmask                                            │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Vulnerable versions │ <2.0.1                                             │
├─────────────────────┼────────────────────────────────────────────────────┤
│ Patched versions    │ >=2.0.1                                            │
├─────────────────────┼────────────────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1658                  │
└─────────────────────┴────────────────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Arbitrary Code Injection          │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ xmlhttprequest-ssl                │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.6.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.6.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1665 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Command Injection                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ lodash                            │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <4.17.21                          │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=4.17.21                         │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1673 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Arbitrary Code Execution          │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ underscore                        │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=1.3.2 <1.12.1                   │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.12.1                          │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1674 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ high                │ Path traversal                    │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ url-parse                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.5.0                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.5.0                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1678 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬─────────────────────────────────────────┐
│ high                │ Resource exhaustion in socket.io-parser │
├─────────────────────┼─────────────────────────────────────────┤
│ Package             │ socket.io-parser                        │
├─────────────────────┼─────────────────────────────────────────┤
│ Vulnerable versions │ <3.3.2 || =3.4.0                        │
├─────────────────────┼─────────────────────────────────────────┤
│ Patched versions    │ >=3.3.2 <3.4.0 || >=3.4.1               │
├─────────────────────┼─────────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1763       │
└─────────────────────┴─────────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Tmp files readable by other users │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ sync-exec                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=0.0.0                           │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ <0.0.0                            │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/310  │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Prototype Pollution              │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ hoek                             │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <= 4.2.0 || >= 5.0.0 < 5.0.3     │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ > 4.2.0 < 5.0.0 || >= 5.0.3      │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/566 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Memory Exposure                  │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ tunnel-agent                     │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <0.6.0                           │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ >=0.6.0                          │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/598 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────┐
│ moderate            │ Denial of Service                │
├─────────────────────┼──────────────────────────────────┤
│ Package             │ axios                            │
├─────────────────────┼──────────────────────────────────┤
│ Vulnerable versions │ <0.18.1                          │
├─────────────────────┼──────────────────────────────────┤
│ Patched versions    │ >=0.18.1                         │
├─────────────────────┼──────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/880 │
└─────────────────────┴──────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Insecure Default Configuration    │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ socket.io                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <2.4.0                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=2.4.0                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1609 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────┐
│ moderate            │ Regular expression denial of service │
├─────────────────────┼──────────────────────────────────────┤
│ Package             │ glob-parent                          │
├─────────────────────┼──────────────────────────────────────┤
│ Vulnerable versions │ <5.1.2                               │
├─────────────────────┼──────────────────────────────────────┤
│ Patched versions    │ >=5.1.2                              │
├─────────────────────┼──────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1751    │
└─────────────────────┴──────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ moderate            │ Open Redirect                     │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ url-parse                         │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <1.5.2                            │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=1.5.2                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1776 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────┐
│ low                 │ Regular Expression Denial of Service │
├─────────────────────┼──────────────────────────────────────┤
│ Package             │ timespan                             │
├─────────────────────┼──────────────────────────────────────┤
│ Vulnerable versions │ >=0.0.0                              │
├─────────────────────┼──────────────────────────────────────┤
│ Patched versions    │ <0.0.0                               │
├─────────────────────┼──────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/533     │
└─────────────────────┴──────────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────┐
│ low                 │ Regular Expression Denial of Service │
├─────────────────────┼──────────────────────────────────────┤
│ Package             │ braces                               │
├─────────────────────┼──────────────────────────────────────┤
│ Vulnerable versions │ <2.3.1                               │
├─────────────────────┼──────────────────────────────────────┤
│ Patched versions    │ >=2.3.1                              │
├─────────────────────┼──────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/786     │
└─────────────────────┴──────────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ low                 │ Prototype Pollution               │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ minimist                          │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <0.2.1 || >=1.0.0 <1.2.3          │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=0.2.1 <1.0.0 || >=1.2.3         │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1179 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ low                 │ Validation Bypass                 │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ kind-of                           │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ >=6.0.0 <6.0.3                    │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=6.0.3                           │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1490 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬───────────────────────────────────┐
│ low                 │ Prototype Pollution               │
├─────────────────────┼───────────────────────────────────┤
│ Package             │ lodash                            │
├─────────────────────┼───────────────────────────────────┤
│ Vulnerable versions │ <4.17.19                          │
├─────────────────────┼───────────────────────────────────┤
│ Patched versions    │ >=4.17.19                         │
├─────────────────────┼───────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1523 │
└─────────────────────┴───────────────────────────────────┘
┌─────────────────────┬──────────────────────────────────────┐
│ low                 │ Regular Expression Denial of Service │
├─────────────────────┼──────────────────────────────────────┤
│ Package             │ redis                                │
├─────────────────────┼──────────────────────────────────────┤
│ Vulnerable versions │ >=2.6.0 <3.1.1                       │
├─────────────────────┼──────────────────────────────────────┤
│ Patched versions    │ >=3.1.1                              │
├─────────────────────┼──────────────────────────────────────┤
│ More info           │ https://npmjs.com/advisories/1662    │
└─────────────────────┴──────────────────────────────────────┘
26 vulnerabilities found
Severity: 7 low | 7 moderate | 10 high | 2 critical"
`;
